log
Fri 21 Apr 2023 05:40:17 PM UTC: 
 tests:  1|8
total_score: 0/70
c3879b6
Fri 21 Apr 2023 05:53:52 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:9: error: ‘map’ undeclared (first use in this function)
   48 |         map->lower_than = lt;
      |         ^~~
treemap.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:43:14: error: unused variable ‘new’ [-Werror=unused-variable]
   43 |   TreeNode * new = (TreeNode*)malloc(sizeof(TreeNode));
      |              ^~~
treemap.c: At top level:
treemap.c:52:11: error: redefinition of ‘createTreeMap’
   52 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
treemap.c:41:15: note: previous definition of ‘createTreeMap’ with type ‘TreeMap *(int (*)(void *, void *))’
   41 |     TreeMap * createTreeMap(int (*lt) (void* key1, void* key2))
      |               ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e952001
Fri 21 Apr 2023 05:58:01 PM UTC: 
 treemap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c:50:11: error: redefinition of ‘createTreeMap’
   50 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
treemap.c:41:15: note: previous definition of ‘createTreeMap’ with type ‘TreeMap *(int (*)(void *, void *))’
   41 |     TreeMap * createTreeMap(int (*lt) (void* key1, void* key2))
      |               ^~~~~~~~~~~~~
Compilation failed
d388966
Fri 21 Apr 2023 05:58:21 PM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  4|7
total_score: 5/70
0552078
Fri 21 Apr 2023 06:11:38 PM UTC: 
 treemap.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 64 insertions(+)
 tests:  4|7
total_score: 5/70
bb46eec
